<resources>
    <string name="app_name">河马无限快递助手</string>

    <string name="dl_order_code">订单号</string>
    <string name="dl_delivery_code">配送单号</string>
    <string name="dl_delivery_addr">配送地址</string>
    <string name="dl_recipient">收件人</string>
    <string name="dl_expr_item">快递物品</string>
    <string name="dl_appointment">预约时间</string>
    <string name="dl_call_prompt_msg">是否确定联系</string>


    <string name="msg_prompt">提示</string>

    <string name="camera_open_notice">您已经开启了灯光！</string>
    <string name="camera_close_notice">您已经关闭了灯光！</string>
    <string name="camera_problem">抱歉，您相机出现问题。您可能需要重启设备。</string>
    <string name="framwork_problem">二维码扫描暂时出现问题。您重启再试。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="result_uri">网址路径</string>
    <string name="button_1">浏览器打开</string>
    <string name="button_2">内容</string>
    <string name="button_3">其它标题</string>
    <string name="result_title_default">网址路径</string>
    <string name="qrcode_notice">将二维码图案放在取景框内，即可自动扫描。</string>
    <string name="openorclose_light">打开或关闭灯光</string>
    <string name="qrcode_empty"></string>
    <string name="qrcode_open">用浏览器打开</string>
    <string name="paramete_error">参数正确，请重新扫描</string>

    <string name="all_photo">全部图片</string>
    <string name="empty_sdcard">没有SD卡</string>
    <string name="take_photo_fail">拍照失败</string>
    <string name="no_photo">无图片</string>
    <string name="waiting">请稍等…</string>
    <string name="submiting">正在提交…</string>
    <string name="select_max_tips">已达到最大选择数量</string>
    <string name="selected">已选(%1$s/%2$s)</string>
    <string name="photo_list_fail">获取图片失败!</string>
    <string name="downloading">正在下载…</string>

    <string name="network_error">网络或服务器异常！</string>
    <string name="server_error">服务器没有响应，请稍后再试！</string>
    <string name="load_error">加载失败，重新尝试！</string>
    <string name="no_select">您还没有选择单子哦！</string>
    <string name="no_select_img">请提供身份证正反面！</string>
    <string name="no_sign">客户还未签收！</string>
    <string name="no_validate">请验证身份证！</string>
    <string name="sign_save_error">电子签名保存失败！</string>

    <string name="search_hint">搜索</string>
</resources>
