<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:foreground="@drawable/selector_item_clickable"
    app:cardCornerRadius="5dp"
    app:elevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_deliveryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/dl_delivery_code"
            android:textColor="@color/item_text" />

        <TextView
            android:id="@+id/tv_deliveryAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_deliveryCode"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/dl_delivery_addr"
            android:textColor="@color/item_text" />

        <TextView
            android:id="@+id/tv_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_deliveryAddr"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/dl_recipient"
            android:textColor="@color/item_text" />

        <TextView
            android:id="@+id/tv_exprItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recipient"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/dl_expr_item"
            android:textColor="@color/item_text" />

        <TextView
            android:id="@+id/tv_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_exprItem"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/dl_appointment"
            android:textColor="@color/item_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_remind"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/item_margin"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_remind"
                android:padding="2dp"
                android:contentDescription="催单"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_late"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/item_margin"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_time"
                android:padding="2dp"
                android:contentDescription="延期"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_complaint"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/item_margin"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_write"
                android:contentDescription="投诉"
                android:padding="2dp"
                android:visibility="gone"/>

        </LinearLayout>



        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tv_recipient"
            android:scaleType="fitCenter"
            android:layout_margin="@dimen/item_margin"
            android:src="@drawable/ic_call"
            android:contentDescription="拨打电话"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/tv_msgContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_appointment"
            android:layout_margin="@dimen/item_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/item_text" />
    </RelativeLayout>
</android.support.v7.widget.CardView>